# R3XA_API

./: .gitignore  .marimo.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN_ACTION_API_ERGO.md  Procfile  README.md  STABILITY.md  dic_pipeline.json  pyproject.toml  railway.toml  rapport.md  requirements.txt
PM_IDICS_2024/: video_metadata.json
binder/: requirements.txt  start
docs/: .rtd-rebuild  DEPLOY_RAILWAY.md  api.md  build.sh  conf.py  dev_workflow.md  engineering_contract.md  examples.md  index.rst  matlab.md  notebooks.md  overview.md  qi_case.md  registry_web.md  requirements.txt  specification.md  typed_models.md  validation.md  web.md
docs/figures/: graph_dic_pipeline.html  graph_qi.html  graph_qi_from_scratch_matlab.html
docs/internal/: CdC_web.md  PLAN_ACTION_API_ERGO.md  PLAN_ACTION_HORS_SCHEMA.md  README.md  rapport.md
examples/: basic_create.py  complex_dic_pipeline.py  complex_dic_pipeline_registry.py  essai-torsion.json  fatigue-with-overload.json  graph_r3xa.py  valid_camera_list.json  valid_tabular_file.json  validate_all.py  validate_examples.py
examples/artifacts/: dic_pipeline.json  dic_pipeline_registry.json  dic_pipeline_typed.json  graph_dic_pipeline.dot  graph_dic_pipeline.html  graph_qi.dot  (+4 more)
r3xa_api/: __init__.py  _stubgen.py  core.py  core.pyi  models.py  registry.py  schema.py  typed.py  validate.py
resources/: schema.json
scripts/: dev.py  generate_core_stub.py  json_to_python.py  postprocess_models.py  run_web.sh
tests/: conftest.py  test_core_helpers.py  test_dev_cli.py  test_examples.py  test_generate_spec.py  test_models.py  test_public_api.py  test_registry.py  test_registry_creation.py  test_schema.py  test_stub_generation.py
tools/: generate_spec.py
web/: README.md  package-lock.json  package.json
(+58 files in other folders)
