[project]
name = "r3xa-api"
version = "1.5.0.dev0"
description = "Python SDK for creating R3XA metadata files (no GUI)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "jsonschema>=4.21.1",
]
license = {text = "GPL-2.0-or-later"}

[project.urls]
Homepage = "https://github.com/jeffwitz/R3XA_API"
Upstream = "https://gitlab.com/photomecanics/r3xa"

[project.optional-dependencies]
dev = ["pytest>=8.0", "datamodel-code-generator>=0.25"]
typed = ["pydantic>=2.0"]
notebook = ["marimo>=0.11", "graphviz>=0.20"]
graph_nx = ["networkx>=3.2", "matplotlib>=3.8"]
web = [
  "fastapi>=0.110",
  "httpx>=0.26",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "graphviz>=0.20",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["r3xa_api", "r3xa_api.webcore"]

[tool.setuptools.package-data]
r3xa_api = ["resources/schema.json", "py.typed", "*.pyi"]
